--- a/index.html
+++ b/index.html
@@ -45,48 +45,48 @@
 
 
         <div class="grid">
-            <div class="square mexico"><span class="count"> <img src="flags/mexico.png" class="icon" />   </span></div>
+            <div class="square mexico"> <img src="flags/mexico.png" class="icon" /> <span class="count">   </span> days in Mexico </div>
 
-            <div class="square australia"> <span class="count"> <img src="flags/australia.png" class="icon" />   </span> </div>
-            <div class="square brazil"><span class="count"> <img src="flags/brazil.png" class="icon"/>   </span> </div>
-            <div class="square canada"><span class="count"> <img src="flags/canada.png" class="icon"/>   </span> </div>
-            <div class="square china"><span class="count"> <img src="flags/china.png" class="icon"/>   </span> </div>
-            <div class="square croatia"><span class="count"> <img src="flags/croatia.png" class="icon"/>   </span> </div>
-            <div class="square france"><span class="count"> <img src="flags/france.png" class="icon"/>   </span> </div>
-            <div class="square germany"><span class="count"> <img src="flags/germany.png" class="icon"/>   </span> </div>
-            <div class="square india"><span class="count"> <img src="flags/india.png" class="icon"/>   </span> </div>
-            <div class="square jamaica"><span class="count"> <img src="flags/jamaica.png" class="icon"/>   </span> </div>
-            <div class="square japan"><span class="count"> <img src="flags/japan.png" class="icon"/>   </span> </div>
+            <div class="square australia"> <img src="flags/australia.png" class="icon" /> <span class="count"> </span> days in Australia </div>
+            <div class="square brazil"> <img src="flags/brazil.png" class="icon" /> <span class="count">  </span> days in Brazil </div>
+            <div class="square canada"> <img src="flags/canada.png" class="icon" /> <span class="count">  </span> days in Canada </div>
+            <div class="square china"> <img src="flags/china.png" class="icon" /> <span class="count">  </span> days in China </div>
+            <div class="square croatia"> <img src="flags/croatia.png" class="icon" /> <span class="count">  </span> days in Croatia </div>
+            <div class="square france"> <img src="flags/france.png" class="icon" /> <span class="count"> </span> days in France </div>
+            <div class="square germany"> <img src="flags/germany.png" class="icon" /> <span class="count">  </span> days in Germany </div>
+            <div class="square india"> <img src="flags/india.png" class="icon" /> <span class="count">  </span> days in India </div>
+            <div class="square jamaica"> <img src="flags/jamaica.png" class="icon" /> <span class="count">  </span> days in Jamaica </div>
+            <div class="square japan"> <img src="flags/japan.png" class="icon" /> <span class="count">  </span> days in Japan </div>
 
-            <div class="square kenya"><span class="count"> <img src="flags/kenya.png" class="icon"/>   </span> </div>
+            <div class="square kenya"> <img src="flags/kenya.png" class="icon" /> <span class="count"> </span> days in Kenya </div>
 
-            <div class="square senegal"><span class="count"> <img src="flags/senegal.png" class="icon"/>   </span> </div>
+            <div class="square senegal"> <img src="flags/senegal.png" class="icon" /> <span class="count">  </span> days in Senegal </div>
 
-            <div class="square southafrica"><span class="count"> <img src="flags/southafrica.png" class="icon"/>   </span> </div>
-            <div class="square thailand"><span class="count"> <img src="flags/thailand.png" class="icon"/>   </span> </div>
+            <div class="square southafrica"> <img src="flags/southafrica.png" class="icon" /> <span class="count">  </span> days in South Africa </div>
+            <div class="square thailand"> <img src="flags/thailand.png" class="icon" /> <span class="count"> </span> days in Thailand </div>
 
         </div>
 
 
         <div class="results" id="final-results">
             <ul>
-                <li data-perDayCost="10.50" data-country="india"> <span class="days"></span> days in India </li>
+                <li data-perDayCost="10.50" data-country="india"> </li>
 
-                <li data-perDayCost="18.80" data-country="china"> <span class="days"></span> days in China </li>
+                <li data-perDayCost="18.80" data-country="china"> </li>
 
-                <li data-perDayCost="19.56" data-country="mexico"> <span class="days"></span> days Mexico </li>
-                <li data-perDayCost="20.82" data-country="jamaica"> <span class="days"></span> days in Jamaica </li>
-                <li data-perDayCost="29.27" data-country="brazil"> <span class="days"></span> days in Brazil</li>
-                <li data-perDayCost="62.13" data-country="canada"> <span class="days"></span> days in Canada</li>
-                <li data-perDayCost="74.78" data-country="australia"> <span class="days"></span> days in Australia</li>
-                <li data-perDayCost="7.80" data-country="kenya"> <span class="days"></span> days in Kenya </li>
-                <li data-perDayCost="40.00" data-country="japan"> <span class="days"></span> days in Japan</li>
-                <li data-perDayCost="33.30" data-country="southafrica"> <span class="days"></span> days in South Africa</li>
-                <li data-perDayCost="33.1" data-country="senegal"> <span class="days"></span> days in Senegal</li>
-                <li data-perDayCost="49.37" data-country="germany"> <span class="days"></span> days in Germany</li>
-                <li data-perDayCost="56.9" data-country="france"> <span class="days"></span> days in France</li>
-                <li data-perDayCost="10.7" data-country="thailand"> <span class="days"></span> days in Thailand</li>
-                <li data-perDayCost="27.4" data-country="croatia"> <span class="days"></span> days in Croatia</li>
+                <li data-perDayCost="19.56" data-country="mexico"> </li>
+                <li data-perDayCost="20.82" data-country="jamaica"> </li>
+                <li data-perDayCost="29.27" data-country="brazil"> </li>
+                <li data-perDayCost="62.13" data-country="canada"> </li>
+                <li data-perDayCost="74.78" data-country="australia"> </li>
+                <li data-perDayCost="7.80" data-country="kenya"> </li>
+                <li data-perDayCost="40.00" data-country="japan"> </li>
+                <li data-perDayCost="33.30" data-country="southafrica"> </li>
+                <li data-perDayCost="33.1" data-country="senegal"> </li>
+                <li data-perDayCost="49.37" data-country="germany"> </li>
+                <li data-perDayCost="56.9" data-country="france"> </li>
+                <li data-perDayCost="10.7" data-country="thailand"> </li>
+                <li data-perDayCost="27.4" data-country="croatia"> </li>
 
         </div>
 
