update css and js

--- a/index.html
+++ b/index.html
@@ -45,25 +45,25 @@
 
 
         <div class="grid">
-            <div class="square mexico"> <img src="flags/mexico.png" class="icon" /> <span class="count">   </span> days in Mexico </div>
+            <div class="square mexico"> <img src="flags/mexico.png" class="icon" /> <span class="count">0</span> Mexico </div>
 
-            <div class="square australia"> <img src="flags/australia.png" class="icon" /> <span class="count"> </span> days in Australia </div>
-            <div class="square brazil"> <img src="flags/brazil.png" class="icon" /> <span class="count">  </span> days in Brazil </div>
-            <div class="square canada"> <img src="flags/canada.png" class="icon" /> <span class="count">  </span> days in Canada </div>
-            <div class="square china"> <img src="flags/china.png" class="icon" /> <span class="count">  </span> days in China </div>
-            <div class="square croatia"> <img src="flags/croatia.png" class="icon" /> <span class="count">  </span> days in Croatia </div>
-            <div class="square france"> <img src="flags/france.png" class="icon" /> <span class="count"> </span> days in France </div>
-            <div class="square germany"> <img src="flags/germany.png" class="icon" /> <span class="count">  </span> days in Germany </div>
-            <div class="square india"> <img src="flags/india.png" class="icon" /> <span class="count">  </span> days in India </div>
-            <div class="square jamaica"> <img src="flags/jamaica.png" class="icon" /> <span class="count">  </span> days in Jamaica </div>
-            <div class="square japan"> <img src="flags/japan.png" class="icon" /> <span class="count">  </span> days in Japan </div>
+            <div class="square australia"> <img src="flags/australia.png" class="icon" /> <span class="count">0</span> Australia </div>
+            <div class="square brazil"> <img src="flags/brazil.png" class="icon" /> <span class="count">0</span> Brazil </div>
+            <div class="square canada"> <img src="flags/canada.png" class="icon" /> <span class="count">0</span> Canada </div>
+            <div class="square china"> <img src="flags/china.png" class="icon" /> <span class="count">0</span> China </div>
+            <div class="square croatia"> <img src="flags/croatia.png" class="icon" /> <span class="count">0</span> Croatia </div>
+            <div class="square france"> <img src="flags/france.png" class="icon" /> <span class="count">0</span> France </div>
+            <div class="square germany"> <img src="flags/germany.png" class="icon" /> <span class="count">0</span> Germany </div>
+            <div class="square india"> <img src="flags/india.png" class="icon" /> <span class="count">0</span> India </div>
+            <div class="square jamaica"> <img src="flags/jamaica.png" class="icon" /> <span class="count">0</span> Jamaica </div>
+            <div class="square japan"> <img src="flags/japan.png" class="icon" /> <span class="count">0</span> Japan </div>
 
-            <div class="square kenya"> <img src="flags/kenya.png" class="icon" /> <span class="count"> </span> days in Kenya </div>
+            <div class="square kenya"> <img src="flags/kenya.png" class="icon" /> <span class="count">0</span> Kenya </div>
 
-            <div class="square senegal"> <img src="flags/senegal.png" class="icon" /> <span class="count">  </span> days in Senegal </div>
+            <div class="square senegal"> <img src="flags/senegal.png" class="icon" /> <span class="count">0</span> Senegal </div>
 
-            <div class="square southafrica"> <img src="flags/southafrica.png" class="icon" /> <span class="count">  </span> days in South Africa </div>
-            <div class="square thailand"> <img src="flags/thailand.png" class="icon" /> <span class="count"> </span> days in Thailand </div>
+            <div class="square southafrica"> <img src="flags/southafrica.png" class="icon" /> <span class="count">0</span> South Africa </div>
+            <div class="square thailand"> <img src="flags/thailand.png" class="icon" /> <span class="count">0</span> Thailand </div>
 
         </div>
 
